# SyntheticData

./: .gitignore  README.md  inference.py  requirements.txt  setup.cfg  setup.py  train.py
src/tdgan/: data.py  main.py  model.py  trainer.py
src/tdgan/utils/: config.py  correlation.py  data_generator.py  utils.py
