[metadata]
name = TDGAN
version = 0.0.1.4
author = Venseven
author_email = venkatesh.s@saama.com
description = Tabular synthetic data generation model with datetime support
long_description = file: README.md 
long_description_content_type = text/markdown
url=https://github.com/saamaresearch/TGAN_tf

classifiers=
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir= 
    =src
packages=find:

[options.packages.find]
where=src
python_requires = >=3.6
# install_requires = ['numpy==1.16.0','pandas>=0.23.4','scikit-learn>=0.20.2','tensorflow-gpu==2.2','tensorpack==0.11','hmmlearn','seaborn','matplotlib']
# install_requires = 
#     numpy>=1.16.0
#     pandas>=0.23.4
#     scikit-learn>=0.20.2
#     tensorflow-gpu==2.2
#     tensorpack==0.11
#     hmmlearn
#     seaborn
#     matplotlib

